examples/errors/5_expression_not_found/layout.tml
#use <definitions.tmd>

<Window width=1920 height={Resource_Height min: 720, max: 1080}/>